Develop (#3)
Initial organization and support for drs related ops
